# helper-structs

./: README.md  pyproject.toml
dummy_scripts/: reviewing_decorated_annotation_for_type_hints.py
old-or-deprecated/old-result-versions/: anotherResult.py
src/: __init__.py
src/helper_structs/: __init__.py  _types.py  failure.py  result.py  safe_exec.py
tests/: README.md
